# rmg-dataportal-migration

./: README.md  columns-ckan2dataverse.json  columns.json  pyproject.toml  requirements-dev.txt  requirements.txt
