[tool.poetry]
name = "ilri-dataportal-to-dataverse"
version = "0.1.0"
description = ""
authors = ["Alan Orth <alan.orth@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^2.7"
ckanapi-exporter = "^0.1.0"

[tool.poetry.dev-dependencies]
csvkit = "^1.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
